hw08 / gc tests completed